# tree-sitter-halcyon

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: wasm-npm-package.yml
bindings/c/: tree-sitter-halcyon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_halcyon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHalcyon/: halcyon.h
bindings/swift/TreeSitterHalcyonTests/: TreeSitterHalcyonTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
